--- a/myhpi/feed/templates/feed/news_feed.html
+++ b/myhpi/feed/templates/feed/news_feed.html
@@ -22,12 +22,12 @@
     <div id="minutes-navigation" class="row">
         <div class="col-6">
             {%  if page.has_previous %}
-                <a class="btn btn-outline-primary" href="?page={{ page.previous_page_number }}">Previous page</a>
+                <a class="btn btn-outline-primary" href="?page={{ page.previous_page_number }}">{% trans "Previous page" %}</a>
             {% endif %}
         </div>
         <div class="col-6 text-end">
             {% if page.has_next %}
-                <a class="btn btn-outline-primary" href="?page={{ page.next_page_number }}">Next page</a>
+                <a class="btn btn-outline-primary" href="?page={{ page.next_page_number }}">{% trans "Next page" %}</a>
             {% endif %}
         </div>
     </div>
