Render label as HTML tag connected to the input

--- a/myhpi/tenca_django/templates/tenca_django/manage_list.html
+++ b/myhpi/tenca_django/templates/tenca_django/manage_list.html
@@ -31,7 +31,7 @@
             {% for field in form %}
                 <div class="form-check">
                     {{ field|addcss:"form-check-input" }}
-                    {{ field.label }}
+                    {{ field.label_tag }}
                 </div>
             {% endfor %}
         </div>
