--- a/myhpi/templates/footer.html
+++ b/myhpi/templates/footer.html
@@ -13,14 +13,12 @@
     <div class="footer-category">
       <h2>{% translate "Language" %}</h2>
       {% for translation in page.get_translations %}
-      <form id="language-form-{{ translation.locale }}" action="{% url 'set_language' %}" method="post" style="display: none;">
+      <form id="language-form-{{ translation.locale }}" action="{% url 'set_language' %}" method="post">
         {% csrf_token %}
-        <input name="next" type="hidden" value="{{ redirect_to }}">
+        <input name="next" type="hidden" value="{{ translation.url }}">
         <input type="hidden" name="language" value="{{ translation.locale.language_code }}">
+        <button class="btn btn-link" type="submit">{{ translation.locale }}</button>
       </form>
-      <a href="#" onclick="document.getElementById('language-form-{{ translation.locale }}').submit(); return false;">
-        {{ translation.locale }}
-      </a>
       {% endfor %}
     </div>
   </div>
