--- a/myhpi/static/css/myHPI_admin.css
+++ b/myhpi/static/css/myHPI_admin.css
@@ -15,11 +15,8 @@
 
     .select2-container--default .select2-selection--single,
     .select2-container--default .select2-selection--multiple,
-    .select2-container--default .select2-selection--multiple .select2-selection__choice {
-        background-color: inherit !important;
-    }
-
-    .select2-container--default .select2-results__option[aria-selected="true"] {
+    .select2-container--default .select2-selection--multiple .select2-selection__choice,
+    .select2-container--default .select2-results__option[aria-selected="true"]  {
         background-color: inherit !important;
     }
 
