--- a/myhpi/search/templates/search/search_result.html
+++ b/myhpi/search/templates/search/search_result.html
@@ -9,7 +9,7 @@
                 {{ result.specific.date|date:"SHORT_DATE_FORMAT" }}
             </time>
         </hgroup>
-        <span class="text-dark">
+        <span class="search-preview">
             {% if result.search_description %}
                 {{ result.search_description }}
             {% else %}
