feat: show permanent link icon on click on mobile

--- a/myhpi/static/scss/myHPI.scss
+++ b/myhpi/static/scss/myHPI.scss
@@ -198,7 +198,7 @@ h1.side-panel-title::after {
     opacity: 0;
 }
 
-*:hover>.toc-permalink, .toc-permalink:focus {
+*:hover>.toc-permalink, *:active>.toc-permalink, .toc-permalink:focus {
     opacity: 1;
 }
 
