Improve search results page (#557)
* Order search results by date

* add a better preview for results

* Highlight matches in title as well

* Limit maximum number of lines if query is not in markdown

--- a/myhpi/search/templates/search/search_result.html
+++ b/myhpi/search/templates/search/search_result.html
@@ -1,19 +1,20 @@
 {% load static wagtailcore_tags %}
 {% load bootstrap_icons %}
+{% load search %}
 
 <a href="{% pageurl result %}">
     <div class="search-result">
         <hgroup class="d-flex justify-content-between">
-            <h5 class="text-break">{{ result.title }}</h5>
+            <h5 class="text-break">{{ result.title|highlight_title:search_query }}</h5>
             <time datetime="{{ result.specific.date|date:"c" }}">
                 {{ result.specific.date|date:"SHORT_DATE_FORMAT" }}
             </time>
         </hgroup>
-        <span class="text-dark">
+        <span class="text-dark search-preview">
             {% if result.search_description %}
                 {{ result.search_description }}
             {% else %}
-                {{ result.specific.body|truncatewords:20 }}
+                {{ result.specific.body|highlight_query_markdown:search_query }}
             {% endif %}
         </span>
     </div>
