--- a/myhpi/templates/base.html
+++ b/myhpi/templates/base.html
@@ -43,13 +43,13 @@
                 <div class="page-content d-flex flex-grow-1 flex-xl-grow-0">
                     <div id="navbar-left" class="d-flex align-items-center">
                         <a class="nav-brand" href="{% pageurl root_page %}">
-                            <img src="{% static 'img/myHPI-Logo.svg' %}" class="w-100" alt={% translate "To home page" %}>
+                            <img src="{% static 'img/myHPI-Logo.svg' %}" class="w-100" alt="{% translate 'To home page' %}">
                         </a>
                     </div>
                     <div id="nav-level-0" class="nav-level"></div>
                     <div id="navbar-right" class="flex-fill justify-content-end d-flex align-items-center">
                         <a id="nav-search-button" class="nav-link" onclick="showSearchModal(event)" data-bs-toggle="tooltip"
-                           data-bs-placement="bottom" data-bs-title={% translate "Ctrl+K" %} role="button">
+                           data-bs-placement="bottom" data-bs-title="{% translate 'Ctrl+K' %}" role="button">
                             {% bs_icon 'search' size='1.4em' %}
                         </a>
                         <a id="nav-mobile-toggle" class="nav-link d-xl-none" href="#nav-item-container-root"
@@ -91,8 +91,7 @@
                         <ul id="nav-item-container-user" class="nav-item-container collapse"
                             data-navbar-level="#nav-level-0">
                             {% if user.groups.all.exists %}
-                                <span class="nav-link pe-none" id="navbar-groups-header"><i>{% translate "Your groups:"
-                                    %}</i></span>
+                                <span class="nav-link pe-none" id="navbar-groups-header"><i>{% translate "Your groups:" %}</i></span>
                                 {% for group in user.groups.all %}
                                     <li class="nav-link nav-link-extra-indent">
                                         <div class="row">
@@ -102,8 +101,7 @@
                                             {% if minutes_creation_links|get_link_for_group:group%}
                                                 <div class="col add-minutes">
                                                     <a href="{{ minutes_creation_links|get_link_for_group:group }}"
-                                                       title="{% translate 'Create minutes' %}"> {% bs_icon 'journal-plus'
-                                                        size='1.4em' %}</a>
+                                                       title="{% translate 'Create minutes' %}"> {% bs_icon 'journal-plus' size='1.4em' %}</a>
                                                 </div>
                                             {% endif %}
                                         </div>
@@ -133,8 +131,7 @@
                     {% for message in messages %}
                         <div class="alert {{ message.tags }} alert-dismissible" role="alert">
                             {{ message }}
-                            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="{% translate 'Close'
-                                                                                                        %}"></button>
+                            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="{% translate 'Close' %}"></button>
                         </div>
                     {% endfor %}
                 </div>
@@ -155,8 +152,7 @@
 
                 <div id="sidebar-toggle" class="d-grid d-lg-none d-print-none">
                     <button type="button" data-bs-toggle="offcanvas" data-bs-target="#sidebar-offcanvas"
-                            aria-controls="sidebar-offcanvas" class="btn btn-light mb-3" aria-label="{% translate " Table of
-                            contents" %}">
+                            aria-controls="sidebar-offcanvas" class="btn btn-light mb-3" aria-label="{% translate 'Table of contents' %}">
                         {% bs_icon 'list-ol' size='1.3rem' %}
                         {% translate "Table of contents" %}
                     </button>
@@ -171,11 +167,9 @@
                 <div class="modal-content">
                     <div class="modal-body">
                         <form id="searchForm" class="d-flex align-items-center" action="{% url 'search' %}">
-                            <input id="searchInput" type="search" class="form-control me-3" placeholder="{%
-                                                                                                         translate 'Search...' %}" aria-label="Suche" name="query">
+                            <input id="searchInput" type="search" class="form-control me-3" placeholder="{% translate 'Search...' %}" aria-label="Suche" name="query">
                             <button type="submit" class="btn btn-primary" aria-label="{% translate 'Start search' %}"
-                                    data-bs-toggle="tooltip" data-bs-placement="bottom" data-bs-title="Enter">{% bs_icon
-                                'search' size='1.4em' extra_classes="text-light" %}</button>
+                                    data-bs-toggle="tooltip" data-bs-placement="bottom" data-bs-title="Enter">{% bs_icon 'search' size='1.4em' extra_classes="text-light" %}</button>
                         </form>
                     </div>
                 </div>
