--- a/myhpi/core/templates/core/minutes.html
+++ b/myhpi/core/templates/core/minutes.html
@@ -66,18 +66,20 @@
                 {% include "core/sidebar.html" %}
             </div>
             <div id="minutes-footer" class="d-none d-print-block"></div>
-            <div id="minutes-navigation" class="row d-print-none">
-                <div class="col-4">
-                    {% prev_minutes page as prev %}
-                    {% if prev %}
-                        <a href="{{ prev.url }}" class="btn btn-outline-primary minutes-navigation-button">{% bs_icon 'arrow-left' extra_classes='minutes-navigation-icon' %} {% translate "Previous minutes" %}</a>
-                    {% endif %}
-                </div>
-                <div class="col-5 text-end">
-                    {% next_minutes page as next %}
-                    {% if next %}
-                        <a href="{{ next.url }}" class="btn btn-outline-primary minutes-navigation-button"> {% translate "Next minutes" %} {% bs_icon 'arrow-right' extra_classes='minutes-navigation-icon' %}</a>
-                    {% endif %}
+            <div id="minutes-navigation" class="col container">
+                <div class="col-lg-9 row justify-content-between d-print-none">
+                    <div class="col-6">
+                        {% prev_minutes page as prev %}
+                        {% if prev %}
+                            <a href="{{ prev.url }}" class="btn btn-outline-primary minutes-navigation-button">{% bs_icon 'arrow-left' extra_classes='minutes-navigation-icon' %} {% translate "Previous minutes" %}</a>
+                        {% endif %}
+                    </div>
+                    <div class="col-6 text-end">
+                        {% next_minutes page as next %}
+                        {% if next %}
+                            <a href="{{ next.url }}" class="btn btn-outline-primary minutes-navigation-button"> {% translate "Next minutes" %} {% bs_icon 'arrow-right' extra_classes='minutes-navigation-icon' %}</a>
+                        {% endif %}
+                    </div>
                 </div>
             </div>
         {% endwith %}
