feat: hide toc button if toc empty

--- a/myhpi/core/templates/core/sidebar.html
+++ b/myhpi/core/templates/core/sidebar.html
@@ -20,10 +20,12 @@
 <!-- Bootstrap 5.2 supports responsive offcanvas.
     This duplication is a workaround and should be removed after the upgrade -->
 <div class="d-none d-lg-block side-panel-container">
+    {%if parsed_md.1|hasTocContent %}
     <aside class="side-panel border-accent sidebar-container d-print-none">
         <h1 class="side-panel-title">{% translate "Table of contents" %}</h1>
         {{ parsed_md.1 }}
     </aside>
+    {% endif %}
     {% if page.attachments.all %}
         <aside class="side-panel border-accent sidebar-container d-print-none">
             <h1 class="side-panel-title">{% translate "Attachments" %}</h1>
@@ -38,28 +40,30 @@
     {% endif %}
 </div>
 
-<div class="offcanvas offcanvas-bottom" tabindex="-1" id="sidebar-offcanvas" aria-labelledby="sidebar-offcanvas-label">
-    <div class="offcanvas-header">
-        <h5 class="offcanvas-title" id="sidebar-offcanvas-label">{% translate "Table of contents" %}</h5>
-        <button type="button" class="btn-close" data-bs-dismiss="offcanvas"
-                aria-label="{% translate 'Close' %}"></button>
-    </div>
-    <div class="offcanvas-body">
-        <aside class="side-panel border-accent sidebar-container d-print-none">
-            <h1 class="side-panel-title">{% translate "Table of contents" %}</h1>
-            {{ parsed_md.1 }}
-        </aside>
-        {% if page.attachments.all %}
+{%if parsed_md.1|hasTocContent %}
+    <div class="offcanvas offcanvas-bottom" tabindex="-1" id="sidebar-offcanvas" aria-labelledby="sidebar-offcanvas-label">
+        <div class="offcanvas-header">
+            <h5 class="offcanvas-title" id="sidebar-offcanvas-label">{% translate "Table of contents" %}</h5>
+            <button type="button" class="btn-close" data-bs-dismiss="offcanvas"
+                    aria-label="{% translate 'Close' %}"></button>
+        </div>
+        <div class="offcanvas-body">
             <aside class="side-panel border-accent sidebar-container d-print-none">
-                <h1 class="side-panel-title">{% translate "Attachments" %}</h1>
-                <ul>
-                    {% for attachment in page.attachments.all %}
-                        <li>
-                            <a href="{{ attachment.url }}">{{ attachment.title }}</a>
-                        </li>
-                    {% endfor %}
-                </ul>
+                <h1 class="side-panel-title">{% translate "Table of contents" %}</h1>
+                {{ parsed_md.1 }}
             </aside>
-        {% endif %}
+            {% if page.attachments.all %}
+                <aside class="side-panel border-accent sidebar-container d-print-none">
+                    <h1 class="side-panel-title">{% translate "Attachments" %}</h1>
+                    <ul>
+                        {% for attachment in page.attachments.all %}
+                            <li>
+                                <a href="{{ attachment.url }}">{{ attachment.title }}</a>
+                            </li>
+                        {% endfor %}
+                    </ul>
+                </aside>
+            {% endif %}
+        </div>
     </div>
-</div>
+{% endif %}
