--- a/myhpi/core/templates/core/minutes.html
+++ b/myhpi/core/templates/core/minutes.html
@@ -6,8 +6,9 @@
 {% load bootstrap_icons %}
 
 {% block content %}
-    <div class="row flex-column flex-lg-row">
-        {% with page.body|markdown as parsed_md %}
+    {% with page.body|markdown as parsed_md %}
+        {% include "core/toc_button.html" with toc=parsed_md.1 %}
+        <div class="row flex-column flex-lg-row">
             <h1 class="page-title">
                 <span class="underline">
                     {{ page.title }}
