--- a/myhpi/polls/templates/polls/base_poll.html
+++ b/myhpi/polls/templates/polls/base_poll.html
@@ -4,32 +4,40 @@
 {% load i18n %}
 
 {% block content %}
-<div class="row">
-        {% with page.description|markdown as parsed_md %}
-        <div class="col-9">
-            <h1> {{ page.title }} </h1>
-            {{ parsed_md.0 }}
-            <h2> {{ page.question }} </h2>
-            {% if page|can_vote:request.user %}
-                {% block ballot %}
-                {% endblock %}
-            {% elif page.results_visible %}
-                {% block results %}
-                {% endblock %}
-            {% elif not page.in_voting_period %}
-                <p> {% translate "You've accessed this page outside of the voting period." %} </p>
-            {% else %}
-                <p> {% translate "You are not allowed to cast (another) vote and the results are not visible yet." %}</p>
-            {% endif %}
+    {% with page.description|markdown as parsed_md %}
+        <div class="row flex-column flex-lg-row">
+            <div class="col-lg-9">
+                <h1 class="page-title">
+                    <span class="underline">
+                        {{ page.title }}
+                    </span>
+                </h1>
+                {{ parsed_md.0|touchify_abbreviations|tag_external_links }}
+                <h2> {{ page.question }} </h2>
+                {% if page|can_vote:request.user %}
+                    {% block ballot %}
+                    {% endblock %}
+                {% elif page.results_visible %}
+                    {% block results %}
+                    {% endblock %}
+                {% elif not page.in_voting_period %}
+                    <p> {% translate "You've accessed this page outside of the voting period." %} </p>
+                {% else %}
+                    <p> {% translate "You are not allowed to cast (another) vote and the results are not visible yet." %}</p>
+                {% endif %}
+            </div>
+            <div class="col-lg-3">
+                <div class="side-panel-container">
+                    <aside class="side-panel border-accent">
+                        <h1 class="side-panel-title">{% translate "Start Date" %}</h1>
+                        <p>{{ page.start_date }}</p>
+                        <h1 class="side-panel-title">{% translate "End Date" %}</h1>
+                        <p>{{ page.end_date }}</p>
+                        <h1 class="side-panel-title">{% translate "Number of participants" %}</h1>
+                        <p>{{ page.already_voted.count }}</p>
+                    </aside>
+                </div>
+            </div>
         </div>
-        <div class="col-3">
-            <h4>{% translate "Start Date" %}</h4>
-            <p>{{ page.start_date }}</p>
-            <h4>{% translate "End Date" %}</h4>
-            <p>{{ page.end_date }}</p>
-            <h4>{% translate "Number of participants" %}</h4>
-            <p>{{ page.already_voted.count }}</p>
-        </div>
-        {% endwith %}
-    </div>
+    {% endwith %}
 {% endblock %}
