--- a/myhpi/polls/templates/polls/poll_list.html
+++ b/myhpi/polls/templates/polls/poll_list.html
@@ -3,7 +3,11 @@
 {% load wagtailcore_tags %}
 
 {% block content %}
-    <h1>{{ page.title }}</h1>
+    <h1 class="page-title">
+        <span class="underline">
+            {{ page.title }}
+        </span>
+    </h1>
     <table class="table table-striped">
         <thead>
             <tr>
