--- a/myhpi/static/css/myHPI_admin.css
+++ b/myhpi/static/css/myHPI_admin.css
@@ -1,26 +1,32 @@
-.action-set-privacy, .privacy-indicator {
-    display: none;
+.action-set-privacy,
+.privacy-indicator {
+  display: none;
 }
 
-.editor-toolbar.fullscreen, .CodeMirror-fullscreen {
-    left: 200px !important ;
-    bottom: 40px !important;
+.editor-toolbar.fullscreen,
+.CodeMirror-fullscreen {
+  left: 200px !important ;
+  bottom: 40px !important;
 }
 
-@media(prefers-color-scheme: dark) {
-    .select2-container--default .select2-selection--single .select2-selection__rendered {
-        color: white !important;
-        background-color: inherit !important;
-    }
+@media (prefers-color-scheme: dark) {
+  .select2-container--default
+  .select2-selection--single
+  .select2-selection__rendered {
+    color: white !important;
+    background-color: inherit !important;
+  }
 
-    .select2-container--default .select2-selection--single,
-    .select2-container--default .select2-selection--multiple,
-    .select2-container--default .select2-selection--multiple .select2-selection__choice,
-    .select2-container--default .select2-results__option[aria-selected="true"]  {
-        background-color: inherit !important;
-    }
+  .select2-container--default .select2-selection--single,
+  .select2-container--default .select2-selection--multiple,
+  .select2-container--default
+  .select2-selection--multiple
+  .select2-selection__choice,
+  .select2-container--default .select2-results__option[aria-selected="true"] {
+    background-color: inherit !important;
+  }
 
-    .select2-dropdown {
-        background-color: black !important;
-    }
+  .select2-dropdown {
+    background-color: black !important;
+  }
 }
